--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apn": "^2.2.0",
     "axios": "^1.7.3",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "newrelic": "^12.14.0"
   }
 }
